# anemoi-transform

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTORS.md  README.md  pyproject.toml  test_spatial.py  tox.ini
.github/: ci-hpc-config.yml
.github/workflows/: ci.yml  downstream-ci-hpc.yml  python-publish.yml  readthedocs-pr-update.yml
dev/: dev.py  dev_obs.py
docs/: Makefile  conf.py  index.rst  installing.rst  overview.rst
docs/_templates/apidoc/: package.rst.jinja
docs/cli/: filters.rst  get-grid.rst  make-regrid-file.rst  make-regrid-matrix.rst  overview.rst
docs/extending/: matching-filters.rst  r_to_d.rst  regrid.rst  uv_to_ddff.rst
docs/extending/yaml/: return_inputs.yaml
docs/filters/: .gitignore  available-filters.rst  earthkitfieldlambda.rst  empty.rst  introduction.rst  lambda.rst  list-of-filters.rst  matching-filters.rst  noop.rst  orog_to_z.rst  q_to_r.rst  r_to_d.rst  regrid.rst  rename.rst  rodeo_opera_clipping.rst  rodeo_opera_preprocessing.rst  single-field-filters.rst  sum.rst  uv_to_ddff.rst  w_to_wz.rst  wz_to_w.rst
docs/filters/yaml/: earthkitfieldlambda.yaml  orog_to_z.yaml  q_to_r.yaml  r_to_d.yaml  regrid2.yaml  rename.yaml  return_inputs.yaml  rodeo_opera_clipping.yaml  rodeo_opera_preprocessing.yaml  sum.yaml  uv_to_ddff.yaml  w_to_wz.yaml  wz_to_w.yaml
docs/modules/: filters.rst  grids.rst  grouping.rst  placeholder.rst  variables.rst
docs/scripts/: Makefile  api_build.sh  list-filters.py
src/anemoi/transform/: __init__.py  __main__.py  constants.py  datum.py  documentation.py  fields.py  filter.py  flavour.py  frames.py  origins.py  placeholder.py  registry.py  source.py  spatial.py  testing.py  transform.py  units.py  workflow.py
src/anemoi/transform/commands/: __init__.py  filters.py  get-grid.py  hello.py  make-regrid-file.py  make-regrid-matrix.py
src/anemoi/transform/data/: __init__.py
src/anemoi/transform/filters/: __init__.py  accum_to_interval.py  apply_mask.py  base.py  clear_step.py  clip.py  clipper.py  cos_sin_from_rad.py  cos_sin_mean_wave_direction.py  create_land_parameters.py  crop_fields.py  cross_mask.py  dewpoint.py  difference.py  empty.py  fill_square.py  fill_square_gribs.py  fill_with_nans.py  geopotential_to_height.py  glacier_mask.py  icon_refinement_level.py  impute_nans.py  interpolate.py  lambda_filters.py  land_parameters.py  lnsp_to_sp.py  make_up_field.py  mars.py  mask.py  matching.py  noop.py  obb_to_df.py  oras6_clipping.py  orog_to_z.py  pipeline.py  q_height.py  q_to_r.py  q_to_r_height.py  regrid.py  remove_metadata.py  (+17 more)
src/anemoi/transform/grids/: __init__.py  icon.py  named.py  unstructured.py
src/anemoi/transform/grouping/: __init__.py
src/anemoi/transform/sources/: __init__.py  mars.py  testing.py
src/anemoi/transform/variables/: __init__.py  from_dict.py  from_ekd.py  variables.py
src/anemoi/transform/workflows/: __init__.py  pipeline.py
tests/: conftest.py  test_accum_to_interval.py  test_apply_mask.py  test_clear_step.py  test_clipper.py  test_combinedfilter.py  test_cos_sin_from_rad.py  test_cos_sin_mean_wave_direction.py  test_create.py  test_cross_param_masking.py  test_dewpoint.py  test_dispatchingfilter.py  test_fields.py  test_filter.py  test_filters.py  test_glacier_mask.py  test_grids.py  test_grouping.py  test_height_level_humidity.py  test_lambda.py  test_lnsp_to_sp.py  test_matching.py  test_orog_to_z.py  test_pressure_level_humidity.py  test_pressure_level_hummidity.py  test_regrid.py  test_remove_metadata.py  test_remove_nans.py  test_rename.py  test_repeat_members.py  test_rescale.py  test_rodeo_opera_clipping.py  test_rodeo_opera_preprocessing.py  test_rotate_winds.py  test_snow.py  test_spatial.py  test_sum.py  test_transform.py  test_uv_to_ddff.py  test_variables.py  (+3 more)
tests/dispatching_filters/: test_clip.py  test_geopotential_to_height.py  test_impute_nans.py  test_mask.py  test_remove_nans.py  test_rename.py
tests/field_filters/: test_accum_to_interval.py  test_apply_mask.py  test_apply_mask_from_field.py  test_clear_step.py  test_clipper.py  test_cos_sin_from_rad.py  test_cos_sin_mean_wave_direction.py  test_dewpoint.py  test_glacier_mask.py  test_height_level_humidity.py  test_impute_nans.py  test_lambda.py  test_lnsp_to_sp.py  test_mask_with_field.py  test_orog_to_z.py  test_pressure_level_humidity.py  test_q_height_with_p.py  test_regrid.py  test_remove_nans.py  test_rename.py  test_repeat_members.py  test_replace_nans.py  test_rescale.py  test_rodeo_opera_clipping.py  test_rodeo_opera_preprocessing.py  test_rotate_winds.py  test_snow.py  test_snow_cover_consistency.py  test_snow_depth_m.py  test_sum.py  test_uv_to_ddff.py
tests/tabular_filters/: test_add_azimuth.py  test_add_forcings.py  test_add_healpix.py  test_add_msg_angles.py  test_apply_column_transformations.py  test_assign_to_grid.py  test_clip.py  test_drop.py  test_drop_duplicates.py  test_drop_nans.py  test_encode_statids.py  test_exclude_dates.py  test_fill_heights.py  test_filter_query.py  test_geopotential_to_height.py  test_impute_nans.py  test_irregular_to_grid.py  test_mask.py  test_mask_dewpoint_temperature.py  test_mask_infs.py  test_mask_outside_range.py  test_mask_values_custom.py  test_radiance_to_brightness_temperature.py  test_remove_extreme_values.py  test_rename.py  test_sort_by.py  test_superob.py
tests/utils/: __init__.py
(+71 files in other folders)
